--- a/sparta/CMakeLists.txt
+++ b/sparta/CMakeLists.txt
@@ -9,6 +9,10 @@ set (GEN_DEBUG_INFO ON CACHE BOOL "Genearate debug info in compile & link -g")
 
 set (SPARTA_BASE ${CMAKE_CURRENT_SOURCE_DIR})
 include (${SPARTA_BASE}/cmake/sparta-config.cmake)
+# add pybind
+add_subdirectory(../../../ext/pybind11 ./pybind11)
+execute_process(COMMAND python3 -m pybind11 --includes OUTPUT_VARIABLE PYTHON_INC)
+message(STATUS ${PYTHON_INC})
 
 # Add the source for libsparta.a
 list (APPEND SourceCppFiles
