[Add-feature]:        Add a vector of HistorgramTreeNode as member vairable to StatisticSet

--- a/sparta/CMakeLists.txt
+++ b/sparta/CMakeLists.txt
@@ -62,6 +62,7 @@ list (APPEND SourceCppFiles
             src/SingleUpdateReport.cpp
             src/SINodeHierarchy.cpp
             src/StatisticDef.cpp
+            src/StatisticSet.cpp
             src/StatisticInstance.cpp
             src/StatisticsArchives.cpp
             src/StatisticsStreams.cpp
